--- a/index.html
+++ b/index.html
@@ -1,47 +1,23 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-            margin: 50px;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <title>Valentine's Letter</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Website</h1>
-        <p>This is a simple HTML page with CSS and JavaScript.</p>
-        <button onclick="showAlert()">Click Me</button>
+        <h1>Will you be my Valentine? ❤️</h1>
+        <div class="question-box">
+            <input type="text" id="customQuestion" placeholder="Type your question...">
+        </div>
+        <div class="buttons">
+            <button id="yesBtn" onclick="answer('yes')">Yes ❤️</button>
+            <button id="noBtn" onclick="answer('no')">No 💔</button>
+        </div>
+        <p id="response"></p>
     </div>
-
-    <script>
-        function showAlert() {
-            alert("Hello! You clicked the button.");
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
