--- a/index.html
+++ b/index.html
@@ -3,18 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Letter</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Your Name Card</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .card {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 300px;
+        }
+        .icon {
+            font-size: 50px;
+            color: #333;
+        }
+        .name {
+            margin-top: 10px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    </style>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Will you be my Valentine? ❤️</h1>
-        <div class="buttons">
-            <button id="yesBtn" onclick="answer('yes')">Yes ❤️</button>
-            <button id="noBtn" onmouseover="moveButton()">No 💔</button>
-        </div>
-        <p id="response"></p>
+
+    <div class="card">
+        <i class="fas fa-user-circle icon"></i>
+        <div class="name">Your Name</div>
     </div>
-    <script src="script.js"></script>
+
 </body>
 </html>
